2010-08-26  Sancho Lerena <slerena@artica.es>

    * include/functions_custom_graphs.php: Fixed ACL.

    * include/functions_agents.php: Fixed ACL on agent search AJAX control.

    * extensions/users_connected.php; Hidden for standard users.

    * operation/events/events_marquee.php: ACL controls.

    * operation/events/events.php: Hide system events to standard users.

    * operation/menu.php: Hide user view on standard users.

2010-08-18  Sancho Lerena <slerena@artica.es>

	* include/functions_io.php
	include/functions_ui.php
	include/functions.php
	index.php
	operation/agentes/gis_view.php
	extras/pandora_diag.php
	general/pandora_help.php
	general/footer.php
	general/login_page.php: Security fixes ported from trunk/3.2 version.

2010-08-18  Sancho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Some minimal updates on Redhat RPM
	about the logrotate.

2010-07-02  Sancho Lerena <slerena@artica.es>

        * pandora_console.redhat.spec: Patches applied from the contribution        
        from KIKUCHI Koichiro, thanks Kikuchi!

	* extras/lodrotate: Specific logrotate file for Redhat systems.

2010-07-02  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_rss.php
	operation/events/events_marquee.php
	operation/events/events.php: Merged from trunk.
	Fixed several bugs into events viewer and events 
	rss file. Apply Ip restriction to API Ip's List 
	to rss and marquee files. Bugfix: 3017263

2010-06-21  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php
	godmode/reporting/graph_builder.php
	godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Merged from trunk.
	Rewritted the combined graphs editor

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Merged from trunk. Changed 
	the Server and All text on the events filter to use gettext. 

2010-06-30  Sergio Martin <sergio.martin@artica.es>
