@@ -1,3 +1,12 @@
+2010-08-29  Sancho Lerena  <slerena@artica.es>
+
+	* include/pchart_graph.php,
+	include/functions_fsgraph.php: Minor (but important) changes on
+	graphs: combined wired mode available on flash, improved legends
+	on both types, and improved flash wired modes. 
+
+	(Ported from Trunk)
+
 2010-08-26  Sancho Lerena <slerena@artica.es>
 
     * include/functions_custom_graphs.php: Fixed ACL.
